fix audio player mobile layout bug

--- a/app/ui/audioPlayer.module.css
+++ b/app/ui/audioPlayer.module.css
@@ -20,7 +20,7 @@
 }
 .playerImageContainer {
   position: relative;
-  width: 300px;
+  width: 100%;
   height: 300px;
   z-index: -1;
 }
@@ -37,8 +37,6 @@
 .image {
   width: 100%;
   height: 100%;
-  padding: 1rem;
-  object-fit: contain;
 }
 .animationWrapper {
   position: absolute;
